[build-system]
requires = [
     "setuptools>=42",
     "wheel"
 ]
build-backend = "setuptools.build_meta"

[project]
name = "exseq-toolbox"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
authors = [{name = "Emma", email = "emmabesier@g.harvard.edu"}]
dynamic = ["version", "description"]

