[metadata]
name = exm
version = 0.0.1
author = 
author_email = 
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bc-cv/ExSeqProcessing2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True